--- a/defaults/defaults.yaml
+++ b/defaults/defaults.yaml
@@ -567,10 +567,8 @@ defaults:
           name_suffix: ''
           entries:
             name_suffix: ''
-            destination_port_from: unspecified
-            destination_port_to: unspecified
-            source_port_from: unspecified
-            source_port_to: unspecified
+            destination_from_port: unspecified
+            source_from_port: unspecified
             ip_protocol: unspecified
       vspan:
         destination_groups:
@@ -897,9 +895,7 @@ defaults:
           ethertype: ip
           protocol: tcp
           source_from_port: unspecified
-          source_to_port: unspecified
           destination_from_port: unspecified
-          destination_to_port: unspecified
           stateful: false
       policies:
         custom_qos:
@@ -1031,7 +1027,7 @@ defaults:
           version: 'v2'
           max_mcast_entries: 4294967295
           reserved_mcast_entries: 0
-        qos_policies:
+        qos:
           name_suffix: ''
           dscp_priority_maps:
             priority: level3
